# rust_rocket_sckeleton

./: .env  Cargo.toml  Rocket.toml  docker-compose.yml  makefile
migrations/2023-09-15-195352_create_rustaceans/: up.sql
migrations/2023-09-15-195420_create_crates/: up.sql
migrations/2023-09-17-184032_create_users/: up.sql
migrations/2023-09-17-184041_create_roles/: up.sql
migrations/2023-09-17-184056_create_users_roles/: up.sql
src/: commands.rs  lib.rs  main.rs
src/auth/: authorize.rs  mod.rs
src/models/: crates.rs  mod.rs  roles.rs  rustaceans.rs  users.rs  users_roles.rs
src/repositories/: crates.rs  mod.rs  roles.rs  rustaceans.rs  users.rs
src/routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
src/utils/: mod.rs  password_hashing.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
