[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"
default-run="server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
argon2 = "0.5.2"
chrono = {version="0.4", features=["serde"]}
clap = "4.4.3"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
log = "0.4.20"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_sync_db_pools = {version = "=0.1.0-rc.3", features=["diesel_postgres_pool"]}
rocket_db_pools={version = "=0.1.0-rc.3", features = ["deadpool_redis"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
